# wlroots

./: meson.build  meson_options.txt  wlroots.syms
backend/libinput/: tablet_tool.c
debian/: changelog  control  libdeepin-wlroots-dev.install  libdeepin-wlroots-examples.dirs  libdeepin-wlroots-examples.install  libdeepin-wlroots6.shlibs  rules
include/: meson.build
include/render/: gles2.h
include/wlr/: meson.build
include/wlr/render/: gles2.h  interface.h  wlr_renderer.h
render/: egl.c  wlr_renderer.c
render/gles2/: renderer.c
types/seat/: wlr_seat.c
util/: global.c
xcursor/: xcursor.c
